crates/rolldown/tests/rolldown/errors/missing_export_ts/foo.ts
declare class foo {}
export default foo
export let bar = 123

